Sorting out the links to the user images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <img src="../img/user-1.png" />
+                    <img src="./img/user-1.png" />
                 </div>
             </div>
         </div>
