adding the latest cover letter as a comment at the bottom of the index.html

--- a/index.html
+++ b/index.html
@@ -295,3 +295,29 @@
 </body>
 
 </html>
+
+
+<!-- Latest cover letter -->
+
+<!-- To whom it may concern,
+
+I am currently working as a data scientist/ machine learning 
+engineer for a MedTech start up called Neurocast. 
+Whilst this is incredibly rewarding, I have worked there for 
+the last 4 years and so am now looking for a different 
+place to be able to grow and improve in.
+
+I think Spotify is the perfect place to do this, 
+and this role especially, because I love the 
+opportunity to use data science in a creative way, 
+I enjoy being able to experiment but also to 
+create sustainable pipelines and workflows, 
+and I find it very rewarding translating data 
+problems to informative insight for others. 
+
+I hope you have all the information you need, 
+and if not please feel free to reach out.
+
+I look forward to hearing from you.
+
+James -->
