--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                             Telephone (mobile): + 31 628 465 035
                         </li>
                         <li>
-                            Email: james.twose2711@gmail.com
+                            Email: contact@jamestwose.com
                         </li>
                         <li>
-                            Address: Soesterberghof 22, Amsterdam 1107GN Netherlands
+                            Address: Amsterdam, Netherlands
                         </li>
                     </ul>
                 </div>
