updating the CV to include links to the github user and the services portfolio

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                         <li>
                             Address: Amsterdam, Netherlands
                         </li>
+                        <li>
+                            Github: <a href=https://github.com/jameshtwose class="overview-link">https://github.com/jameshtwose</a>
+                        </li>
+                        <li>
+                            Portfolio: <a href=https://services.jms.rocks class="overview-link">https://services.jms.rocks</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-6">
