continuing to add to the latest list of works

--- a/list_of_works.html
+++ b/list_of_works.html
@@ -110,6 +110,26 @@ Neurocast</h2>
 <h2 id="personal-projects">Personal Projects</h2>
 <ul>
 <li><p><strong>2022</strong></p></li>
+<li><p>A website showing latest data science work and portfolio (HTML,
+CSS, Javascript)</p>
+<ul>
+<li><a
+href="https://github.com/jameshtwose/services.jms.rocks">https://github.com/jameshtwose/services.jms.rocks</a></li>
+<li><a
+href="https://services.jms.rocks">https://services.jms.rocks</a></li>
+</ul></li>
+<li><p>A general Data Science repository (Python, R, Jupyter, HTML)</p>
+<ul>
+<li><a
+href="https://github.com/jameshtwose/Data-Science">https://github.com/jameshtwose/Data-Science</a></li>
+<li><a
+href="https://jameshtwose.github.io/Data-Science/">https://jameshtwose.github.io/Data-Science/</a></li>
+</ul></li>
+<li><p>A fully functioning chatbot (Pytorch, Flask, Microsoft Azure)</p>
+<ul>
+<li><a
+href="https://github.com/jameshtwose/dumb_friend">https://github.com/jameshtwose/dumb_friend</a></li>
+</ul></li>
 <li><p>Stand alone health app (Python - FastAPI, deta, nosql)</p>
 <ul>
 <li><a
