adding more work to the list_of_works, and updating the format and titles of the static cv - next step is to flesh out the main my experience section with the breakdown of different roles - and output/ responsibilities within Neurocast

--- a/list_of_works.html
+++ b/list_of_works.html
@@ -110,6 +110,29 @@ Neurocast</h2>
 <h2 id="personal-projects">Personal Projects</h2>
 <ul>
 <li><p><strong>2022</strong></p></li>
+<li><p>Landing page of analyses for the Citizen Shield project (Python,
+Jupyter, HTML, CSS)</p>
+<ul>
+<li><a
+href="https://github.com/Citizen-Shield/multi-method-protective-behaviour">https://github.com/Citizen-Shield/multi-method-protective-behaviour</a></li>
+<li><a
+href="https://citizen-shield.github.io/multi-method-protective-behaviour/">https://citizen-shield.github.io/multi-method-protective-behaviour/</a></li>
+</ul></li>
+<li><p>A fully functioning frontend for a food tracking application
+(React, Javascript, HTML, CSS)</p>
+<ul>
+<li><a
+href="https://github.com/jameshtwose/jmstracker-frontend">https://github.com/jameshtwose/jmstracker-frontend</a></li>
+<li><a href="https://trckr.jms.rocks">https://trckr.jms.rocks</a></li>
+</ul></li>
+<li><p>A fully functioning API backend for a food tracking application
+(Python - FastAPI, deta, Postgresql)</p>
+<ul>
+<li><a
+href="https://github.com/jameshtwose/jmstracker-backend">https://github.com/jameshtwose/jmstracker-backend</a></li>
+<li><a
+href="https://4qcow4.deta.dev/docs">https://4qcow4.deta.dev/docs</a></li>
+</ul></li>
 <li><p>A website showing latest data science work and portfolio (HTML,
 CSS, Javascript)</p>
 <ul>
