--- a/index.html
+++ b/index.html
@@ -65,19 +65,56 @@
     <div class="cv" id="cv">
         <div class="container">
             <div class="row">
-                <!-- <h1 class="text-center">Curriculum Vitae</h1> -->
+                <h2 class="text-center">My Experience</h2>
                 <div class="col-md-6">
-                    <h3 class="text-center">My Experience</h3>
                     <ul class="timeline">
                         <li>
-                            <h4><span>2018 - </span> Data Scientist/ Machine Learning Engineer</h4>
+                            <h4><span>2021 - </span> Principal Scientist - Innovation</h4>
+                            <p>
+                                TODO.<br />
+                                <b>Company</b> -
+                                <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
+                                <br />
+                                <b>Duration</b> - 1yr [2021 to present]<br />
+                                <b>Location</b> - Amsterdam, Netherlands
+                            </p>
+                        </li>
+                        <li>
+                            <h4><span>2020 - 2021</span> Medior Data Scientist</h4>
+                            <p>
+                                TODO.<br />
+                                <b>Company</b> -
+                                <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
+                                <br />
+                                <b>Duration</b> - 1yr [2020 to 2021]<br />
+                                <b>Location</b> - Amsterdam, Netherlands
+                            </p>
+                        </li>
+                        <li>
+                            <h4><span>2019 - 2020</span> Machine Learning Engineer</h4>
+                            <p>
+                                TODO.<br />
+                                <b>Company</b> -
+                                <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
+                                <br />
+                                <b>Duration</b> - 1yr [2019 to 2020]<br />
+                                <b>Location</b> - Amsterdam, Netherlands
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-6">
+                    <ul class="timeline">
+                        <li>
+                            <h4><span>2018 - 2019</span> Junior Data Scientist</h4>
                             <p>
                                 Applying nonlinear time series analyses to keystroke dynamics
                                 for a bio tech startup.<br />
                                 <b>Company</b> -
                                 <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
                                 <br />
-                                <b>Duration</b> - 4yr [2018 to Present]<br />
+                                <b>Duration</b> - 1yr [2018 to 2019]<br />
                                 <b>Location</b> - Amsterdam, Netherlands
                             </p>
                         </li>
@@ -120,8 +157,17 @@
                     </ul>
                 </div>
 
-                <div class="col-md-6">
-                    <h3 class="text-center">My Education</h3>
+            </div>
+        </div>
+    </div>
+
+    <!-- Education -->
+    <div class="education" id="education">
+        <div class="container">
+            <div class="row">
+                <h2 class="text-center">My Education</h2>
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
                     <ul class="timeline">
                         <li>
                             <h4>
@@ -190,10 +236,10 @@
                     <ul class="timeline">
                         <li>
                             <h4>
-                                Languages
+                                Software Experience
                             </h4>
                             <p>
-                                Native English speaker, articulate in Dutch, articulate in French.
+                                AWS - S3, AWS - EC2, AWS - DynamoDB, AWS - RDS, Microsoft Azure, Visual Studio Code, Pycharm, deta, SPSS, Qualtrics, Nvivo, Microsoft Suite.
                             </p>
                         </li>
                         <li>
@@ -202,6 +248,9 @@
                             </h4>
                             <div>
                                 <img align="left" alt="Python" width="26px" src="https://cdn.worldvectorlogo.com/logos/python-5.svg" />
+                                <img align="left" alt="Jupyter" width="26px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/1200px-Jupyter_logo.svg.png" />
+                                <img align="left" alt="RStudio" width="26px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-AsiDfFNNm4dyUjQBzJAJ5LUD9g7Ieih6HdzOhhsJ9w&s" />
+                                <img align="left" alt="RShiny" width="26px" src="https://www.researchgate.net/profile/Anibal-Herrera-Contreras/publication/346521755/figure/fig8/AS:963948107014146@1606834546741/Figura-24-Logo-Shiny-Informacion-tomada-de-GitHub-Shiny-2020.ppm" />
                                 <img align="left" alt="Rlang" width="28px" src="https://cdn.worldvectorlogo.com/logos/r-lang.svg" />
                                 <img align="left" alt="AWS" width="30px" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" />
                                 <img align="left" alt="PostgreSQL" width="26px" src="https://cdn.worldvectorlogo.com/logos/postgresql.svg" />
@@ -217,10 +266,10 @@
                         </li>
                         <li>
                             <h4>
-                                General IT skills
+                                Languages
                             </h4>
                             <p>
-                                Experience in SPSS, Qualtrics, Nvivo, Microsoft Suite.
+                                Native English speaker, articulate in Dutch, articulate in French.
                             </p>
                         </li>
                         <li>
