updating the list of works - I think everything is up to date there now, and expanding on the work I have done at Neurocast in the main static-cv

--- a/index.html
+++ b/index.html
@@ -69,9 +69,19 @@
                 <div class="col-md-6">
                     <ul class="timeline">
                         <li>
-                            <h4><span>2021 - </span> Principal Scientist - Innovation</h4>
+                            <h4><span>2021 - Present</span> Principal Scientist - Innovation</h4>
                             <p>
-                                TODO.<br />
+                                Tasked with researching and creating bespoke analysis methods to monitor, predict 
+                                and forecast changes in Multiple Sclerosis (MS) based on data derived from smartphones. Inspiration for these 
+                                approaches has come from complex systems science (e.g.
+                                <a href="http://www.recurrence-plot.tk/marwan_PhysRep2007.pdf" class="cv-link"> Recurrence Quantification Analysis</a>),
+                                optimal control theory (e.g.
+                                <a href="https://cdn.syscop.de/publications/Licitra2019.pdf" class="cv-link"> Licitra et al., 2018</a>),
+                                electrical engineering (e.g.
+                                <a href="http://koreascience.or.kr/article/JAKO201329063579214.pdf" class="cv-link"> Single Input Single Output systems</a>),   
+                                and neuroscience (e.g.
+                                <a href="https://www.nature.com/articles/s41467-018-05892-0" class="cv-link"> Subtype and Stage Inference</a>).
+                                <br />
                                 <b>Company</b> -
                                 <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
                                 <br />
@@ -82,7 +92,13 @@
                         <li>
                             <h4><span>2020 - 2021</span> Medior Data Scientist</h4>
                             <p>
-                                TODO.<br />
+                                The main data scientist assigned to conduct analyses in collaboration with the Amsterdam University
+                                medical center. This collaboration, intended to validate the use of smartphone interactions as a means to 
+                                monitor and predict Multiple Sclerosis (MS) outcomes, led to 
+                                <a href="https://journals.sagepub.com/doi/pdf/10.1177/1352458520968797" class="cv-link"> a cross sectional journal article</a>,
+                                <a href="https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/ene.15162" class="cv-link"> a responsiveness journal article</a>, and
+                                <a href="https://www.jmir.org/author/submission/37614" class="cv-link"> a longitudinal journal article</a>.
+                                <br />
                                 <b>Company</b> -
                                 <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
                                 <br />
@@ -93,7 +109,15 @@
                         <li>
                             <h4><span>2019 - 2020</span> Machine Learning Engineer</h4>
                             <p>
-                                TODO.<br />
+                                Created a
+                                <a href="https://jameshtwose.github.io/Data-Science/ML-workflow.html" 
+                                class="cv-link"> machine learning workflow</a>
+                                and conducted an assortment of machine learning 
+                                analyses (SVM, Random Forests, Multilayer Perceptron etc.) to predict MS outcome 
+                                measures using keystroke data.
+                                These analyses were all internal but an example of an approach similar to what was
+                                done may be found <a href="https://jameshtwose.github.io/example_deliverables/" 
+                                class="cv-link"> here</a>.<br />
                                 <b>Company</b> -
                                 <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
                                 <br />
@@ -109,8 +133,13 @@
                         <li>
                             <h4><span>2018 - 2019</span> Junior Data Scientist</h4>
                             <p>
-                                Applying nonlinear time series analyses to keystroke dynamics
-                                for a bio tech startup.<br />
+                                Applied nonlinear time series analyses - specifically dynamic complexity to keystroke dynamics
+                                in order to match fluctuations in the keystroke data with clinically relevant changes in outcome
+                                measures. This culminated in the following journal article: <a
+                                href="https://jameshtwose.github.io/EWS-supplemental-material/" class="cv-link">Twose
+                                et al, 2020</a>. Also looked into the use of Mixed Effects Random Forests to predict
+                                MS outcomes whilst taking into account the hierarchical nature of clinical data and still
+                                applying a nonlinear approach (in contrast to Linear Mixed Models).<br />
                                 <b>Company</b> -
                                 <a href="https://neurocast.nl" class="cv-link"> Neurocast</a>
                                 <br />
