fixing a typo in the known languages

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <h4>Python</h4>
               <ul>
                 <li class="sublist">
-                  <b>ForData Science/ ML</b>
+                  <b>Data Science/ ML</b>
                   <ul>
                     <li class="sublist">
                       pandas, polars, numpy, scikit-learn, statsmodels,
